Updated few dependencies and fixed sonar issues